docs/1.7/subLayerModelName.md
# Model Name

Model names allow clients to identify entities of a building without having to relay on a specific name of a categrory layer for example. The following modelNames are currently defined.

### Related:

[bld::sublayer](sublayer.bld.md)
### Properties

| Model Name | Example Category Entities |
| --- | --- |
| Casework | Shelving, Cabinets, Countertops |
|Ceiling	|Ceiling|
|Columns	|Columns|
|CurtainWallMullions|	Vertical bar between panes of glass|
|CurtainWallPanels|	Glass wall panels|
|Doors|	Doors|
|Entourage|	People, Plants, Vehicle|
|Floors	|Floors|
|Furniture|	Office furniture,FurnitureSystems, Group of furniture|
|GenericModel|	Miscellaneous items|
|Mass|Element used on the process of visualizing, studying, and resolving building forms using massing.|
|Parking|	Parking|
|Planting	|Exterior planting|
|PlumbingFixtures	|Toilets, Sinks, Vanities|
|Ramps	|Ramps|
|Roofs|	Roofs|
|Rooms|Rooms|
|Site|	Planter, Dumpster, Scaffolding|
|SpecialtyEquipment|	Bicycle rack, Solar panels, Recycle bins|
|Stairs|	Stairs|
|StairsRailing|	StairsRailing|
|Topography	|Topography|
|Walls|	Walls|
|Windows|	Windows|
|StructuralColumns|	StructuralColumns|
|StructuralFoundations|	StructuralFoundations|
|StructuralFraming|	StructuralFraming|
|ElectricalEquipment|Lighting and appliance panel board, Ethernet switch|
|ElectricalFixtures	|Ground fault circuit interrupt, Emergency switch|
|LightingFixtures|Floor lamp, Ceiling light|
|CommDevices| Intercom Systems Components |
|DataDevices|Ethernet and other network connections|
|FireAlarmDevices|Smoke detectors, manual pull stations|
|SecurityDevices|CCTV, motions sensors, Door locks|
|TelephonDevices|Phone jacks|
|NurseCallDevices|Nurse call devices|
|LightingDevices|Daylight sensors, occupancy sensors, manual switches|
|AirTerminals	|Exhaust grill, Return diffuser|
|FlexDucts|	FlexDucts|
|DuctAccessories|Balancing damper, Fire damper, Filter cartridge|
|DuctFitting|DuctFitting|
|Ducts|	Ducts|
|MechanicalEquipment|Chillers, Boilers, AWWA pumps|
|FlexPipes|FlexPipes|
|PipeAccessory|	3-way valve, Butterfly valve, Gate valve|
|PipeFitting	|PipeFitting|
|Pipes|	Pipes|
|Sprinkler|	Sprinkler|
|CableTray|Runs such as rigid ladder or channel tray.|
|CableTrayFitting|Cable Tray Fitting, such as elbows, tees, wyes, crosses and other unions.|
|Conduit|Rigid runs, such as tube or trough for protecting electric wiring.|
|ConduitFitting|Conduit Fitting, such as elbows, tees, wyes, crosses and other unions.|
